<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Register">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/profile"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/welcomeTitle"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/welcomeMessage"
        android:textColor="@color/black"
        android:textSize="@dimen/heading"
        app:layout_constraintBottom_toTopOf="@+id/registerMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/registerMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="122dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/registerMessage"
        android:textColor="@color/black"
        android:textSize="@dimen/heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="334dp"
        android:layout_height="543dp"
        android:background="@drawable/border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerMessage"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/profileIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="14dp"
            android:contentDescription="@string/profileIcon"
            app:layout_constraintBottom_toTopOf="@+id/nameInput"
            app:layout_constraintStart_toStartOf="@+id/nameInput"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/purple_profile_icon" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginEnd="46dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="@dimen/text"
            app:layout_constraintBaseline_toBaselineOf="@+id/nameInput"
            app:layout_constraintEnd_toStartOf="@+id/nameInput"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="69dp"
            android:layout_marginBottom="9dp"
            android:autofillHints="@string/nameHint"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/nameHint"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/text"
            app:layout_constraintBottom_toTopOf="@+id/usernameInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/profileIcon" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="@dimen/text"
            app:layout_constraintBaseline_toBaselineOf="@+id/usernameInput"
            app:layout_constraintEnd_toStartOf="@+id/usernameInput"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="69dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="@string/usernameHint"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/usernameHint"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/text"
            app:layout_constraintBottom_toTopOf="@+id/emailInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/username"
            app:layout_constraintTop_toBottomOf="@+id/nameInput" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginEnd="44dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="@dimen/text"
            app:layout_constraintBaseline_toBaselineOf="@+id/emailInput"
            app:layout_constraintEnd_toStartOf="@+id/emailInput"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="72dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="@string/emailHint"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/text"
            app:layout_constraintBottom_toTopOf="@+id/passwordInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/usernameInput" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="@dimen/text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.113"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.543" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="@dimen/text"
            app:layout_constraintBaseline_toBaselineOf="@+id/addressInput"
            app:layout_constraintEnd_toStartOf="@+id/addressInput"
            app:layout_constraintHorizontal_bias="0.132"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/addressInput"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="64dp"
            android:autofillHints="@string/addressHint"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/addressHint"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <TextView
            android:id="@+id/dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/dob"
            android:textColor="@color/black"
            android:textSize="@dimen/text"
            app:layout_constraintBottom_toTopOf="@+id/monthInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressInput" />

        <EditText
            android:id="@+id/dateInput"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/date"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/date"
            android:inputType="date"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/text"
            app:layout_constraintEnd_toStartOf="@+id/monthInput"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dob" />

        <EditText
            android:id="@+id/monthInput"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:autofillHints="@string/month"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/month"
            android:inputType="date"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/text"
            app:layout_constraintBottom_toTopOf="@+id/registerButton"
            app:layout_constraintEnd_toStartOf="@+id/yearInput"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/dateInput"
            app:layout_constraintTop_toBottomOf="@+id/dob" />

        <EditText
            android:id="@+id/yearInput"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/year"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/year"
            android:inputType="date"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/text"
            app:layout_constraintBaseline_toBaselineOf="@+id/monthInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/monthInput" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="6dp"
            android:backgroundTint="@color/profile"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dateInput"
            app:layout_constraintTop_toBottomOf="@+id/monthInput" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints="@string/passwordHint"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/text"
            app:layout_constraintBottom_toTopOf="@+id/addressInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.365"
            app:layout_constraintStart_toEndOf="@+id/password" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>